splash screen done

--- a/app/src/main/res/layout/activity_forgetpass.xml
+++ b/app/src/main/res/layout/activity_forgetpass.xml
@@ -5,6 +5,130 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".forgetpass">
+    tools:context=".LoginPage"
+    android:background="#8E44AD"
+    >
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/roundshape"
+        android:gravity="center"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/img"
+
+            />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_marginTop="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/roundshape2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/poppins_bold"
+            android:gravity="center"
+            android:text="Reset Password"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins"
+            android:paddingStart="60dp"
+            android:text="Email"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/poppins"
+            android:layout_marginStart="55dp"
+            android:layout_marginEnd="55dp"
+            android:padding="8dp"
+            android:hint="abc@gmail.com"
+            android:background="@drawable/roundshape"
+            android:backgroundTint="#FBE5FF"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins"
+            android:paddingStart="60dp"
+            android:text="Password"
+            android:textColor="@color/black"
+            android:textSize="13sp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:backgroundTint="#FBE5FF"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:layout_marginEnd="55dp"
+            android:padding="8dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/poppins"
+            android:hint="enter your password"
+            android:background="@drawable/roundshape"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:backgroundTint="#FBE5FF"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:layout_marginEnd="55dp"
+            android:padding="8dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/poppins"
+            android:hint="confirm your password"
+            android:background="@drawable/roundshape"
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginTop="30dp"
+            android:padding="15dp"
+            android:fontFamily="@font/poppins"
+            android:text="Update your password"
+            android:backgroundTint="#8E44AD"
+            android:layout_gravity="center"
+            />
+
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
