Integrated Intent, Created directory for auth pages and added login checks.

--- a/app/src/main/res/layout/activity_forgetpass.xml
+++ b/app/src/main/res/layout/activity_forgetpass.xml
@@ -5,9 +5,20 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginPage"
+    tools:context=".auth.views.forgetpass"
     android:background="#8E44AD"
     >
+
+    <ImageView
+        android:id="@+id/go_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/baseline_arrow_back_ios_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
