--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginPage"
+    tools:context=".auth.views.LoginPage"
     android:background="#8E44AD"
     >
 
@@ -73,6 +73,7 @@
             android:textSize="13sp" />
 
         <EditText
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -96,6 +97,7 @@
             android:textSize="13sp" />
 
         <EditText
+            android:id="@+id/password"
             android:layout_width="match_parent"
             android:backgroundTint="#FBE5FF"
             android:layout_height="wrap_content"
@@ -108,6 +110,7 @@
             android:background="@drawable/roundshape"
             />
         <TextView
+            android:id="@+id/forgot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -119,6 +122,7 @@
             android:textSize="13sp" />
 
         <Button
+            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
@@ -133,6 +137,7 @@
 
 
         <TextView
+            android:id="@+id/signup"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="15dp"
