added signup details in firestoredatabse added validation

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -62,6 +62,7 @@
                 android:textSize="13sp" />
 
             <EditText
+                android:id="@+id/namesign"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="55dp"
@@ -84,6 +85,7 @@
                 android:textSize="13sp" />
 
             <EditText
+                android:id="@+id/emailsign"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="55dp"
@@ -106,6 +108,7 @@
                 android:textSize="13sp" />
 
             <EditText
+                android:id="@+id/phonesign"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="55dp"
@@ -128,6 +131,7 @@
                 android:textSize="13sp" />
 
             <EditText
+                android:id="@+id/passsign"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="55dp"
@@ -149,6 +153,7 @@
                 android:textSize="13sp" />
 
             <EditText
+                android:id="@+id/passconfirmsign"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="55dp"
@@ -161,6 +166,7 @@
                 android:padding="8dp" />
 
             <Button
+                android:id="@+id/register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -170,7 +176,7 @@
                 android:backgroundTint="#8E44AD"
                 android:fontFamily="@font/poppins"
                 android:padding="15dp"
-                android:text="Login" />
+                android:text="Register" />
 
 
         </LinearLayout>
