--- a/app/src/main/res/layout/activity_item_student.xml
+++ b/app/src/main/res/layout/activity_item_student.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:background="@drawable/lavender_border"
         android:padding="16dp">
 
@@ -24,38 +24,30 @@
             android:id="@+id/studentRoll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Roll: 123" />
-
-        <TextView
-            android:id="@+id/studentClass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Class: 12" />
-
-        <TextView
-            android:id="@+id/studentProgram"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Program: Science" />
+            android:text="Roll: 123"
+            android:layout_marginLeft="15dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginLeft="200dp">
 
             <ImageView
                 android:id="@+id/editIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/baseline_edit_24"
-                android:padding="8dp" />
+                android:padding="8dp"
+                />
 
             <ImageView
                 android:id="@+id/deleteIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/baseline_delete_outline_24"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:layout_marginLeft="15dp"/>
 
         </LinearLayout>
     </LinearLayout>
