--- a/app/src/main/res/layout/activity_item_student.xml
+++ b/app/src/main/res/layout/activity_item_student.xml
@@ -25,7 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Roll: 123"
-            android:layout_marginLeft="15dp"/>
+            android:layout_marginLeft="16dp"
+            android:textSize="20dp"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
