--- a/app/src/main/res/layout/activity_class_list.xml
+++ b/app/src/main/res/layout/activity_class_list.xml
@@ -8,14 +8,6 @@
     tools:context=".MainActivity">
 
     <!-- Search View to filter students -->
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView_class"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:queryHint="Search students"
-        android:iconifiedByDefault="false"
-        android:layout_margin="8dp"
-        />
 
 
     <!-- RecyclerView for displaying students in a card format -->
@@ -24,8 +16,8 @@
         android:id="@+id/class_name"
         android:layout_width="204dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/searchView_class"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="10dp"
@@ -39,8 +31,8 @@
         android:id="@+id/recyclerView_class"
         android:layout_width="match_parent"
         android:layout_height="557dp"
-        android:layout_below="@id/searchView_class"
-        android:layout_marginTop="46dp"
+        android:layout_below="@+id/class_name"
+        android:layout_marginTop="4dp"
         android:padding="8dp"
         android:scrollbars="vertical" />
 
