--- a/app/src/main/res/layout/activity_item_class.xml
+++ b/app/src/main/res/layout/activity_item_class.xml
@@ -2,7 +2,9 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="8dp"
+    tools:context=".ClassList"
     android:elevation="4dp">
 
     <LinearLayout
@@ -35,6 +37,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/stud"
                     android:layout_width="33dp"
                     android:layout_height="33dp"
                     android:layout_gravity="center"
@@ -57,6 +60,7 @@
                 android:layout_marginLeft="10dp">
 
                 <ImageView
+                    android:id="@+id/Attnd"
                     android:layout_width="33dp"
                     android:layout_height="33dp"
                     android:layout_gravity="center"
@@ -78,6 +82,7 @@
                 android:layout_marginLeft="10dp">
 
                 <ImageView
+                    android:id="@+id/rep"
                     android:layout_width="33dp"
                     android:layout_height="33dp"
                     android:layout_gravity="center"
@@ -100,6 +105,7 @@
                 android:layout_marginLeft="15dp">
 
                 <ImageView
+                    android:id="@+id/editC"
                     android:layout_width="33dp"
                     android:layout_height="33dp"
                     android:layout_gravity="center"
@@ -121,6 +127,7 @@
                 android:layout_marginLeft="10dp">
 
                 <ImageView
+                    android:id="@+id/deleteC"
                     android:layout_width="33dp"
                     android:layout_height="33dp"
                     android:layout_gravity="center"
