1. Created class list page and connected to login and when fab button clicked connects to add class page.
2. removed few lines of code from ClassList

3. Added intent in ClassAdapter for student, attendance, report, edit and delete.

4. Created Settings Activity. Added Theme feature. Made changes in login and sign up page to check working of dark mode and light mode. Made changes in roundshape2.xml and roundshape.xml for dark mode theme.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,35 @@
     <style name="Base.Theme.StudentManagement" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_300</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnSecondary">@color/drawable_color_dark</item>
+        <item name="colorOnSecondaryContainer">@color/drawable_color_dark2</item>
+        <!-- Status bar color -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+    </style>
+
+    <!--Dark Mode -->
+    <!--Screen background if dark mode on -->
+    <style name="SCREEN">
+        <item name="android:background">#232323</item>
+    </style>
+
+    <!--Text background if dark mode on -->
+    <style name="TEXT">
+        <item name="android:textColor">#FFF</item>
+    </style>
+    <style name="HINT">
+        <item name="android:textColorHint">#49414B</item>
+    </style>
+
+    <!--Button background if dark mode on -->
+    <style name="BUTTON">
+        <item name="android:background">@color/purple_300</item>
+        <item name="android:textColor">#FFF</item>
     </style>
 </resources>
