--- a/app/src/main/res/layout/activity_class_list.xml
+++ b/app/src/main/res/layout/activity_class_list.xml
@@ -12,6 +12,19 @@
 
     <!-- RecyclerView for displaying students in a card format -->
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="93dp"
+        android:layout_height="68dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="312dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="6dp"
+        app:srcCompat="@drawable/setting" />
+
+
     <TextView
         android:id="@+id/class_name"
         android:layout_width="204dp"
@@ -19,10 +32,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="28dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="183dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="178dp"
         android:text="Class List"
         android:textSize="25dp"
         android:textStyle="bold" />
