--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -49,7 +49,7 @@
             android:fontFamily="@font/poppins_bold"
             android:gravity="center"
             android:text="Welcome Back!"
-            android:textColor="@color/black"
+            style="@style/TEXT"
             android:textSize="20dp"
 
             />
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Please Login to your Account"
-            android:textColor="@color/black"
+            style="@style/TEXT"
             android:textSize="12sp"
             />
 
@@ -69,7 +69,7 @@
             android:fontFamily="@font/poppins"
             android:paddingStart="60dp"
             android:text="Email"
-            android:textColor="@color/black"
+            style="@style/TEXT"
             android:textSize="13sp" />
 
         <EditText
@@ -81,9 +81,10 @@
             android:layout_marginStart="55dp"
             android:layout_marginEnd="55dp"
             android:padding="8dp"
+            style="@style/HINT"
             android:hint="abc@gmail.com"
             android:background="@drawable/roundshape"
-            android:backgroundTint="#FBE5FF"
+            android:backgroundTint="?attr/colorOnSecondaryContainer"
             />
 
         <TextView
@@ -93,17 +94,18 @@
             android:fontFamily="@font/poppins"
             android:paddingStart="60dp"
             android:text="Password"
-            android:textColor="@color/black"
+            style="@style/TEXT"
             android:textSize="13sp" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
-            android:backgroundTint="#FBE5FF"
+            android:backgroundTint="?attr/colorOnSecondaryContainer"
             android:layout_height="wrap_content"
             android:layout_marginStart="55dp"
             android:layout_marginEnd="55dp"
             android:padding="8dp"
+            style="@style/HINT"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins"
             android:hint="enter your password"
