--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -38,7 +38,7 @@
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Sign up"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:textSize="25dp"
 
                 />
@@ -48,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Create a New Account by singing up"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:textSize="12sp" />
 
             <TextView
@@ -58,7 +58,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="60dp"
                 android:text="Name"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:textSize="13sp" />
 
             <EditText
@@ -72,6 +72,7 @@
                 android:backgroundTint="#FBE5FF"
                 android:fontFamily="@font/poppins"
                 android:hint="enter your name"
+                style="@style/HINT"
                 android:padding="8dp" />
 
             <TextView
@@ -81,7 +82,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="60dp"
                 android:text="Emails"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:textSize="13sp" />
 
             <EditText
@@ -95,6 +96,7 @@
                 android:backgroundTint="#FBE5FF"
                 android:fontFamily="@font/poppins"
                 android:hint="enter your email"
+                style="@style/HINT"
                 android:padding="8dp" />
 
             <TextView
@@ -104,7 +106,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="60dp"
                 android:text="phone number"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:textSize="13sp" />
 
             <EditText
@@ -118,6 +120,7 @@
                 android:backgroundTint="#FBE5FF"
                 android:fontFamily="@font/poppins"
                 android:hint="+91"
+                style="@style/HINT"
                 android:padding="8dp" />
 
             <TextView
@@ -127,7 +130,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="60dp"
                 android:text="Password"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:textSize="13sp" />
 
             <EditText
@@ -141,6 +144,7 @@
                 android:backgroundTint="#FBE5FF"
                 android:fontFamily="@font/poppins"
                 android:hint="enter your password"
+                style="@style/HINT"
                 android:padding="8dp" />
             <TextView
                 android:layout_width="match_parent"
@@ -149,7 +153,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="60dp"
                 android:text="Confirm Password"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:textSize="13sp" />
 
             <EditText
@@ -163,6 +167,7 @@
                 android:backgroundTint="#FBE5FF"
                 android:fontFamily="@font/poppins"
                 android:hint="enter your password"
+                style="@style/HINT"
                 android:padding="8dp" />
 
             <Button
