--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,31 @@
     <style name="Base.Theme.StudentManagement" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimaryVariant">@color/purple_300</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnSecondary">@color/drawable_color_light</item>
+        <item name="colorOnSecondaryContainer">@color/drawable_color_light2</item>
+        <!-- Status bar color -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <!--Light Mode -->
+    <!--Screen background if light mode on -->
+    <style name="SCREEN">
+        <item name="android:background">#FFF</item>
+    </style>
+
+    <!--Text background if light mode on -->
+    <style name="TEXT">
+        <item name="android:textColor">#000</item>
+    </style>
+    <!--Button background if light mode on -->
+    <style name="BUTTON">
+        <item name="android:background">@android:color/holo_purple</item>
+        <item name="android:textColor">#FFF</item>
     </style>
 
     <style name="Theme.StudentManagement" parent="Base.Theme.StudentManagement" />
