addded edit page added delete class fixed login page password text

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -108,6 +108,7 @@
             android:fontFamily="@font/poppins"
             android:hint="enter your password"
             android:background="@drawable/roundshape"
+            android:inputType="textPassword"
             />
         <TextView
             android:id="@+id/forgot"
