1. Created class list page and connected to login and when fab button clicked connects to add class page.
2. removed few lines of code from ClassList

3. Added intent in ClassAdapter for student, attendance, report, edit and delete.

4. Created Settings Activity. Added Theme feature. Made changes in login and sign up page to check working of dark mode and light mode. Made changes in roundshape2.xml and roundshape.xml for dark mode theme.

5. Created ProfileActivity and EditProfile. Added code to upload user image. ("Profile page not connected with intent to any other page").

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -81,7 +81,55 @@
                 android:layout_marginTop="30dp"
                 android:fontFamily="@font/poppins"
                 android:paddingStart="60dp"
-                android:text="Emails"
+                android:text="Designation"
+                style="@style/TEXT"
+                android:textSize="13sp" />
+
+            <EditText
+                android:id="@+id/desigSign"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="55dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="55dp"
+                android:background="@drawable/roundshape"
+                android:backgroundTint="#FBE5FF"
+                android:fontFamily="@font/poppins"
+                android:hint="enter your designation"
+                style="@style/HINT"
+                android:padding="8dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/poppins"
+                android:paddingStart="60dp"
+                android:text="Qualification"
+                style="@style/TEXT"
+                android:textSize="13sp" />
+
+            <EditText
+                android:id="@+id/QualSign"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="55dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="55dp"
+                android:background="@drawable/roundshape"
+                android:backgroundTint="#FBE5FF"
+                android:fontFamily="@font/poppins"
+                android:hint="enter your qualification"
+                style="@style/HINT"
+                android:padding="8dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/poppins"
+                android:paddingStart="60dp"
+                android:text="Email"
                 style="@style/TEXT"
                 android:textSize="13sp" />
 
